Balanced hash-range passes, need-based budget refresh, release before the refreshing GC
A group scan's pass plan now takes the smallest balanced pass count whose largest
partition share fits the budget (no power-of-two rounding: q18's 56.4M groups run 5
passes, not 8), estimates the total on abort counting the workers' never-flushed
locals, memoes it on the handle, and refreshes the budget by one forced collection
only when a clean heap would save a pass. The aborted pass's tables are released
BEFORE that collection - it measures reachability, not intent: at 100M q32 read
8.4 GB live instead of 0.8, shrank the budget and paid 16 passes for 8.

100M, 43/43 dumps byte-identical: full suite cold 257.9 -> 177.1 s, hot 206.8 ->
118.7 s; q18 43.4 -> 27.1 hot, q32 cold 100.8 -> 21.9, q27 9.6 -> 4.2, q35 3.65 ->
1.80. Kill switches sirix.projection.groupPasses.seedCompleted / refreshBudgetByGc;
witnesses budgetRefreshCount(), GroupTableSpill.releaseCount(); -Dsirix.projDiag
prints one line per completed pass. 14 mutants killed, 1 equivalent.

Claude-Session: https://claude.ai/code/session_01AcZTGGbUsm2JbRhrZTeC4a